[package]
name = "ckb-std"
version = "0.15.3"
authors = ["Nervos network"]
edition = "2021"
license = "MIT"
repository = "https://github.com/nervosnetwork/ckb-std"
description = "This library contains serveral modules help you write CKB contract with Rust"
exclude = ["docs"]

[package.metadata.docs.rs]
# All features except simulator and rustc-dep-of-std.
features = ["allocator", "ckb-types", "libc", "calc-hash", "build-with-clang", "dlopen-c", "ckb2023"]
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["allocator", "ckb-types", "libc", "calc-hash"]
calc-hash = ["ckb-types/calc-hash"]
allocator = ["buddy-alloc"]
simulator = ["ckb-x64-simulator"]
dlopen-c = ["libc"]
build-with-clang = []
libc = []
ckb2023 = []

[build-dependencies]
cc = "1.0"

[dependencies]
ckb-types = { package = "ckb-gen-types", version = "0.116", default-features = false, optional = true }
buddy-alloc = { version = "0.5.0", optional = true }
ckb-x64-simulator = { version = "0.8", optional = true }
gcd = "2.3.0"

[workspace]
exclude = ["test"]
resolver = "2"
