[package]
name = "ckb-std"
version = "0.17.1"
authors = ["Nervos network"]
edition = "2021"
license = "MIT"
repository = "https://github.com/nervosnetwork/ckb-std"
description = "This library contains serveral modules help you write CKB contract with Rust"
exclude = ["docs"]

[package.metadata.docs.rs]
# All features except simulator and rustc-dep-of-std.
features = [
  "allocator",
  "ckb-types",
  "libc",
  "calc-hash",
  "build-with-clang",
  "dlopen-c",
]
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["allocator", "calc-hash", "ckb-types", "dummy-atomic", "libc"]
calc-hash = ["ckb-types/calc-hash"]
allocator = ["buddy-alloc"]
native-simulator = ["ckb-x64-simulator"]
dlopen-c = ["libc"]
build-with-clang = []
libc = []
# work with `target-feature=-a` Cargo flag
dummy-atomic = []
log = ["dep:log", "dummy-atomic"]
# require `ckb-hash`
type-id = ["ckb-hash", "ckb-types"]


[build-dependencies]
cc = "1.0"

[dependencies]
ckb-types = { package = "ckb-gen-types", version = "0.200.0", default-features = false, optional = true }
ckb-hash = { version = "0.200.0", default-features = false, features = [
  "ckb-contract",
], optional = true }

buddy-alloc = { version = "0.6", optional = true }
ckb-x64-simulator = { version = "0.11", optional = true }
gcd = "2.3"
log = { version = "0.4", optional = true, default-features = false }

[workspace]
exclude = ["test"]
resolver = "2"
