[package]
name = "ckb-rust-demo"
version = "0.1.0"
authors = ["Nervos network"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-x64-simulator = "0.10"
ckb-testtool = "0.13.1"
serde_json = "1.0"
ckb-mock-tx-types = "0.119.0"
blake2b-rs = "0.1.5"
faster-hex = "0.6"
ckb-hash = "0.119.0"
