[package]
name = "ckb-std-tests"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = { path = "../../", features = ["build-with-clang", "dlopen-c", "log"] }
blake2b-ref = { version = "0.3", default-features = false }
bytes = { version = "1.7", default-features = false }
lazy_static = { version = "1.5.0", default-features = false, features = ["spin_no_std"] }
log = { version = "0.4", default-features = false }
spin = { version = "0.9" }
