[package]
name = "contract"
version = "0.1.0"
authors = ["Nervos network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "contract"
path = "src/main.rs"
[[bin]]
name = "exec-caller"
path = "src/exec_caller.rs"
[[bin]]
name = "exec-callee"
path = "src/exec_callee.rs"

[dependencies]
ckb-std = { path = "../.." }
blake2b-ref = { version = "0.3", default-features = false }

[build-dependencies]
blake2b-rs = "0.1.5"

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1
