[package]
name = "simulator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "contract"
path = "src/main.rs"
[[bin]]
name = "exec-caller-by-code-hash"
path = "src/exec_caller_by_code_hash.rs"
[[bin]]
name = "exec-callee"
path = "src/exec_callee.rs"

[dependencies]
ckb-std = { path = "../..", default-features=false, features = ["allocator", "calc-hash", "ckb-types", "libc", "native-simulator"] }
blake2b-ref = { version = "0.3", default-features = false }
bytes = { version = "1.6.0", default-features = false }
log = { version = "0.4.17", default-features = false }

[dev-dependencies]
libloading = "0.8.4"
