[package]
name = "exec-callee-dbg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
exec-callee = { path = "../", features = ["simulator"] }
ckb-std = { path = "../../../", features = ["simulator"] }

[lib]
crate-type = ["cdylib"]

[workspace]