[package]
name = "exec-callee-dbg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
exec-callee = { path = "../", features = ["native-simulator"] }
ckb-std = { path = "../../../", default-features=false, features = ["allocator", "build-with-clang", "calc-hash", "ckb-types", "libc", "native-simulator"] }

[lib]
crate-type = ["cdylib"]

[workspace]

# After ckb-x64-simluator is released, it can be removed. 
[replace]
"ckb-x64-simulator:0.9.2" = { git = "https://github.com/joii2020/ckb-x64-simulator.git", rev = "cbf704d" }
