[package]
name = "exec-callee-dbg"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
exec-callee = { path = "../", features = ["native-simulator"] }
ckb-std = { path = "../../../", default-features=false, features = ["allocator", "build-with-clang", "calc-hash", "ckb-types", "libc", "native-simulator"] }

[lib]
crate-type = ["cdylib"]

[workspace]
